src/styles.css
:root {
  --font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  --white: #ffffff;
  --black: #000000;
  --off-white: #f0f0f0;
  --platinum: #e2e2e2;
  --silver: #b3b3b3;
  --grey: #858585;
  --bright-blue: #4872f9;
  --light-blue: #ecf0ff;
}

html,
body {
  width: 100%;
  height: 100%;
}

body {
  font-family: Roboto, var(--font-family);
  height: 100vh;
}

#content {
  display: flex;
  height: 100%;
  overflow: hidden;
}

hr.horizontal {
  border: 0;
  border-top: 1px solid var(--platinum);
}

hr.vertical {
  display: inline-block;
  width: 1px;
  height: 20px;
  border: 0;
  border-left: 1px solid var(--platinum);
}

.horizontal.categories.separator {
  margin: 1rem 0;
  text-align: center;
}

.categories.section.container {
  padding: 1rem;
  padding-right: 0.5rem;
  flex: 1;
  overflow-y: auto;
  min-width: 0;
}

.group-by.item,
.group-by.heading {
  min-width: 0;
  position: relative;
  display: grid;
  grid-template-columns: max-content 1fr;
  align-items: center;
  column-gap: 0.5rem;
  padding: 0.5rem;
  border-radius: 6px;
  overflow-x: hidden;
}

.group-by.item:hover {
  background-color: var(--off-white);
}

.group-by.heading {
  font-weight: bold;
  color: var(--silver);
}

.group-by.svg {
  width: 20px;
  height: 20px;
}

.group-by.list.text {
  text-overflow: ellipsis;
}

.group-by.item.active {
  background-color: var(--light-blue);
}

.add-list.add-icon {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
  width: 20px;
  height: auto;
  border-radius: 0.25rem;
}

.add-list.add-icon:hover {
  background-color: var(--off-white);
}

.tasks.section.container {
  padding: 1rem;
  border-left: 1px solid var(--platinum);
  border-right: 1px solid var(--platinum);
  flex: 2;
  min-width: 0;
}

.tasks.heading.container {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.tasks.heading.svg {
  width: 30px;
  height: auto;
}

.tasks.heading.text {
  margin-right: auto;
  font-size: 20px;
  font-weight: 600;
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.view-task.section.container {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  flex: 2;
}

.add-task.input.container {
  position: relative;
  margin-top: 1rem;
  margin-bottom: 0.5rem;
}

#add-task {
  width: 100%;
  border-radius: 6px;
  border: 1px solid var(--off-white);
  outline: none;
  background-color: var(--off-white);
  padding: 0.5rem;
}

#add-task::placeholder {
  color: var(--grey);
}

#add-task:focus {
  background-color: var(--white);
  border: 1px solid var(--bright-blue);
}

.add-task.svgs.container {
  display: flex;
  position: absolute;
  width: fit-content;
  gap: 6px;
  padding: 0.5rem;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
}

.add-task.svg {
  width: 20px;
  height: auto;
}

.task.container {
  display: flex;
  align-items: center;
  padding: 0.5rem 1rem;
  border-radius: 6px;
  gap: 0.5rem;
}

.task-details.container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.task.svg {
  width: 24px;
  height: auto;
}

input[type="checkbox"] {
  appearance: none;
  width: 0;
  height: 0;
  position: absolute;
}

label:has(input[type="checkbox"]) {
  position: relative;
  width: 18px;
  height: 18px;
  border: 1.5px solid var(--grey);
  margin-right: auto;
  border-radius: 4px;
}

label:has(input[type="checkbox"]):hover {
  background-color: var(--platinum);
}

label:has(input[type="checkbox"]:checked) {
  background-color: var(--platinum);
  border-color: var(--platinum);
}

label:has(input[type="checkbox"]:checked):hover {
  background-color: var(--grey);
  border-color: var(--grey);
}

/* Create a custom checkbox */
.checkmark {
  position: absolute;
  top: 42%;
  left: 50%;
  width: 6px;
  height: 11px;
  border: solid var(--white);
  border-width: 0px 2px 2px 0px;
  -webkit-transform: translate(-50%, -50%) rotate(45deg);
  -ms-transform: translate(-50%, -50%) rotate(45deg);
  transform: translate(-50%, -50%) rotate(45deg);
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark {
  content: "";
  position: absolute;
  display: none;
}

/* Show the checkmark when checked */
label input:checked ~ .checkmark {
  display: block;
}

.task.name:empty:not(:focus):before {
  content: attr(data-ph);
  color: var(--grey);
}

.task.due-date {
  text-align: right;
  margin-right: -0.75rem;
  font-size: 12px;
  color: var(--bright-blue);
}

.task.container:hover,
.task.container.active {
  background-color: var(--light-blue);
}

.horizontal.task.separator {
  border-color: var(--off-white);
  margin-left: calc(1rem + 26px);
  margin-right: 4px;
  text-align: right;
}

.horizontal.task.separator.hidden {
  display: block;
  border-color: transparent;
}

.view-task.header.container {
  width: 100%;
  display: flex;
  align-items: center;
  padding: 1rem;
}

.view-task.svg {
  display: inline;
  width: 20px;
  height: auto;
}

.vertical.view-task.separator {
  margin: 0 0.5rem;
}

.view-task.header.container label {
  margin: 0;
}

.view-task.date {
  display: flex;
  align-items: center;
  gap: 4px;
}

.view-task.due-date {
  font-size: 0.75rem;
  color: var(--grey);
}

.view-task.header.svg:last-child {
  margin-left: auto;
}

.view-task.body.container {
  padding: 1rem;
  overflow-y: auto;
  flex: 1;
}

.view-task.name {
  margin-bottom: 0.5rem;
  font-size: 1.3rem;
  font-weight: 500;
  outline: 0;
}

.view-task.description {
  outline: 0;
  overflow-wrap: break-word;
  white-space: normal;
  overflow: visible;
}

/* trick for getting faded out text in "textbox" */
.view-task.description:empty:not(:focus):before {
  content: attr(data-ph);
  color: var(--grey);
}

.view-task.name:empty:not(:focus):before {
  content: attr(data-ph);
  color: var(--grey);
}

.add-list.modal {
  position: absolute;
  top: 25%;
  left: 50%;
  border: 0;
  z-index: 999;
  width: max-content;
  border-radius: 0.5rem;
  outline: 0;
  box-shadow: 0 0 5px -1px var(--grey);
  transform: translate(-50%, -50%);
  min-width: 225px;
  max-width: 450px;
  width: 35%;
}

.add-list.form.heading {
  text-align: center;
}

.add-list.add-name {
  margin: 0.5rem 0;
  border: 1px solid var(--grey);
  border-radius: 0.25rem;
  font-weight: 500;
  outline: 0;
  width: 100%;
}

.add-list.add-name:focus {
  border: 1px solid var(--bright-blue);
}

.add-list.add-name::placeholder {
  color: var(--silver);
}

.add-list.buttons-container {
  display: flex;
  gap: 0.5rem;
}

.add-list.button {
  flex: 1;
  border-radius: 0.25rem;
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

.add-list.cancel {
  border: 1px solid var(--silver);
  background: var(--white);
  font-weight: 400;
}

.add-list.save {
  border: 1px solid var(--bright-blue);
  background: var(--bright-blue);
  color: var(--white);
}

.add-list.cancel:active {
  background-color: var(--off-white);
}

.add-list.save:disabled {
  color: var(--silver);
  filter: hue-rotate(7deg) brightness(1.6) contrast(80%);
}

.add-list.save:active {
  border-color: var(--platinum);
  background-color: var(--platinum);
}

dialog::backdrop {
  background-color: var(--grey);
  opacity: 0.25;
}

.hidden {
  display: none;
  padding: 0;
  margin: 0;
  height: 0;
  width: 0;
}

